--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <!-- Banner -->
             <section class="slider__area">
                 <div class="slider-active">
-                    <div class="single-slider slider__height d-flex align-items-center" data-background="assets/img/slider/slider-1.jpg">
+                    <div class="single-slider slider__height d-flex align-items-center" data-background="assets/img/slider-1.jpg">
                         <div class="slider__shape">
                             <img class="shape triangle" src="assets/img/triangle.png" alt="triangle">
                             <img class="shape dotted-square" src="assets/img/dotted-square.png" alt="dotted-square">
