--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!--
+@author wangpeng
+@description LAMYE INTERNATIONAL CO.LIMITD Website
+@date 2024/04/02
+-->
 <!doctype html>
 <html class="no-js" lang="zxx">
     <head>
